--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,56 +2,54 @@
 service: f2
 
 # Name of the container image.
-image: your-user/f2
+image: ghcr.io/dreikanter/f2
 
-# Deploy to these servers.
-servers:
-  web:
-    - 192.168.0.1
-  # job:
-  #   hosts:
-  #     - 192.168.0.1
-  #   cmd: bin/jobs
-
-# Enable SSL auto certification via Let's Encrypt and allow for multiple apps on a single web server.
-# Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
-#
-# Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
-proxy:
-  ssl: true
-  host: app.example.com
+# Deploy to these servers - using destinations.
+destinations:
+  staging:
+    servers:
+      web:
+        - 123.123.123.123
+    proxy:
+      ssl: true
+      host: dev.frf.im
+    env:
+      clear:
+        RAILS_ENV: staging
+        DATABASE_URL: postgres://f2:password@f2-db:5432/f2_staging
+    accessories:
+      db:
+        image: postgres:17
+        host: 123.123.123.123
+        port: "127.0.0.1:5432:5432"
+        env:
+          clear:
+            POSTGRES_DB: f2_staging
+            POSTGRES_USER: f2
+          secret:
+            - POSTGRES_PASSWORD
+        directories:
+          - data:/var/lib/postgresql/data
 
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
-  # server: registry.digitalocean.com / ghcr.io / ...
-  username: your-user
+  server: ghcr.io
+  username: dreikanter
 
   # Always use an access token rather than real password when possible.
   password:
     - KAMAL_REGISTRY_PASSWORD
 
-# Inject ENV variables into containers (secrets come from .kamal/secrets).
+# Shared ENV variables for all destinations
 env:
   secret:
     - RAILS_MASTER_KEY
   clear:
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
-    # When you start using multiple servers, you should split out job processing to a dedicated machine.
     SOLID_QUEUE_IN_PUMA: true
-
-    # Set number of processes dedicated to Solid Queue (default: 1)
-    # JOB_CONCURRENCY: 3
-
-    # Set number of cores available to the application on each server (default: 1).
-    # WEB_CONCURRENCY: 2
-
-    # Match this to any external database server to configure Active Record correctly
     # Use f2-db for a db accessory server on same machine via local kamal docker network.
-    # DB_HOST: 192.168.0.2
-
-    # Log everything from Rails
-    # RAILS_LOG_LEVEL: debug
+    DB_HOST: f2-db
 
 # Aliases are triggered with "bin/kamal <alias>". You can overwrite arguments on invocation:
 # "bin/kamal logs -r job" will tail logs from the first server in the job section.
@@ -83,23 +81,7 @@ builder:
 # ssh:
 #   user: app
 
-# Use accessory services (secrets come from .kamal/secrets).
-# accessories:
-#   db:
-#     image: mysql:8.0
-#     host: 192.168.0.2
-#     # Change to 3306 to expose port to the world instead of just local network.
-#     port: "127.0.0.1:3306:3306"
-#     env:
-#       clear:
-#         MYSQL_ROOT_HOST: '%'
-#       secret:
-#         - MYSQL_ROOT_PASSWORD
-#     files:
-#       - config/mysql/production.cnf:/etc/mysql/my.cnf
-#       - db/production.sql:/docker-entrypoint-initdb.d/setup.sql
-#     directories:
-#       - data:/var/lib/mysql
+# Accessories are now defined in destinations above
 #   redis:
 #     image: redis:7.0
 #     host: 192.168.0.2
