--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,14 +87,7 @@ jobs:
           if ! dpkg -l | grep -q libpq-dev; then
             sudo apt-get update -qq
           fi
-          sudo apt-get install --no-install-recommends --no-upgrade -y \
-            build-essential \
-            git \
-            libpq-dev \
-            libyaml-dev \
-            node-gyp \
-            pkg-config \
-            python-is-python3
+          sudo apt-get install --no-install-recommends --no-upgrade -y build-essential git libpq-dev libyaml-dev node-gyp pkg-config python-is-python3
 
       - name: Checkout code
         uses: actions/checkout@v5
