--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,26 +1,31 @@
 <% password_digest = BCrypt::Password.create("password") %>
 
 user:
+  name: User
   email_address: user@example.com
   password_digest: <%= password_digest %>
   password_updated_at: <%= 1.week.ago %>
 
 other_user:
+  name: Other User
   email_address: other_user@example.com
   password_digest: <%= password_digest %>
   password_updated_at: <%= 2.days.ago %>
 
 admin_user:
+  name: Admin
   email_address: admin@example.com
   password_digest: <%= password_digest %>
   password_updated_at: <%= 1.week.ago %>
 
 one:
+  name: One
   email_address: one@example.com
   password_digest: <%= password_digest %>
   password_updated_at: <%= 1.week.ago %>
 
 two:
+  name: Two
   email_address: two@example.com
   password_digest: <%= password_digest %>
   password_updated_at: <%= 2.days.ago %>
