Review index update

--- a/REVIEW.yml
+++ b/REVIEW.yml
@@ -12,6 +12,11 @@ reviewed:
   test/models/feed_preview_test.rb: 776a82e3956626aa1587bea62b9e92f8149025d6
   app/controllers/statuses_controller.rb: 6d820378569806e41e3d19c873bef94da049512a
   app/views/layouts/application.html.erb: 490bc86b4a627f190485b141415f7ded881eba9a
-  app/models/feed_profile.rb: 3603d5567066dd203b9b202459dc8b3acd02000d
+  app/models/feed_profile.rb: 9468e97dc77353c9927ad183fee0065dc3fbc2f5
   app/helpers/component_options_helper.rb: caf9e81109ca8a6178e5982a7c7e7e037531f587
   app/controllers/feed_previews_controller.rb: 0d64168f04d8a1f82d3a96d3354fa0583dcdb9d5
+  app/services/profile_matcher/base.rb: bb1210eb9e0863bdb851b93a1713ea513d891659
+  app/services/profile_matcher/xkcd_profile_matcher.rb: be92c82b40e4d79b2b6bda22a2e0e338ff9d9e94
+  app/services/profile_matcher/rss_profile_matcher.rb: c2787500c2b05c0ecd1555e0c992ecea0ab8d371
+  test/services/profile_matcher/xkcd_profile_matcher_test.rb: aceeaee123344c4f579ab6624ef852def17d781c
+  test/services/profile_matcher/rss_profile_matcher_test.rb: d086a134dd73ee7bf6c0fd7b5bfa9d2dd012e8c1
