--- a/REVIEW.yml
+++ b/REVIEW.yml
@@ -24,7 +24,7 @@ reviewed:
   app/models/onboarding.rb: 5882fe03cbb230b2fed2985ec0fa108ebe9abb31
   app/views/onboardings/show.html.erb: e2daac654b014c9b09e369477df7c77164e5bafa
   app/views/settings/show.html.erb: 45919f70c85193df4e0f0d3b63cb567b57f59679
-  config/routes.rb: e8cf5ed43f27666b5d2d4c8bf9dca7d74a363cbd
+  config/routes.rb: 30c656f7b88eb5957d8e181cea31c35bc6b5e4e5
   db/migrate/20251015190852_create_onboardings.rb: 5a7453159a08e4ae6d8fb06a62c3c5125c16fbf9
   db/schema.rb: 1129a810b750d0843ead1202d4072b54b0ebc63a
   test/factories/onboardings.rb: fc0be997250b4b40ce4c0e5c635e8649252d7ab6
@@ -46,4 +46,8 @@ reviewed:
   app/views/onboarding/feeds/show.html.erb: ef841f73c86c1517f85521aa70aaf0b41a643cfc
   test/controllers/onboarding/access_token_validations_controller_test.rb: 8120d0d50c8b624100e711265df81b1560cfd695
   test/controllers/onboarding/access_tokens_controller_test.rb: 7c3fba894ca329bf58615e2a599f6724517a19f3
-  app/controllers/admin/system_stats_controller.rb: 3f2b555ee67ed88fe00169b0c8d87fb4fd844bac
+  app/controllers/admin/system_stats_controller.rb: f5f1ea0666ea35b29925eaa0e353bd385d1c2257
+  app/helpers/time_helper.rb: c88da2961eea22381bfbc506eb2e024de40184a4
+  app/services/disk_usage_service.rb: 4e7162e70f8ab4601323af0207f3db5cc9790eff
+  app/views/admin/system_stats/show.html.erb: 0a7bbc1d0aa01a8530f656fdef261e713cb997f4
+  app/views/admins/show.html.erb: 5b79fdff9f4fd1a85d46fc225fb4f8f6be570e15
