--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,32 +5,32 @@ user:
   email_address: user@example.com
   password_digest: <%= password_digest %>
   password_updated_at: <%= 1.week.ago %>
-  state: 2
+  state: active
 
 other_user:
   name: Other User
   email_address: other_user@example.com
   password_digest: <%= password_digest %>
   password_updated_at: <%= 2.days.ago %>
-  state: 2
+  state: active
 
 admin_user:
   name: Admin
   email_address: admin@example.com
   password_digest: <%= password_digest %>
   password_updated_at: <%= 1.week.ago %>
-  state: 2
+  state: active
 
 one:
   name: One
   email_address: one@example.com
   password_digest: <%= password_digest %>
   password_updated_at: <%= 1.week.ago %>
-  state: 2
+  state: active
 
 two:
   name: Two
   email_address: two@example.com
   password_digest: <%= password_digest %>
   password_updated_at: <%= 2.days.ago %>
-  state: 2
+  state: active
