--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
     "autoprefixer": "^10.4.21",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "daisyui": "^4.12.14",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
-    "sass": "^1.90.0"
+    "sass": "^1.90.0",
+    "tailwindcss": "^3.4.18"
   },
   "scripts": {
-    "build:css:compile": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules --quiet-deps",
+    "build:css:bootstrap": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.bootstrap.css --no-source-map --load-path=node_modules --quiet-deps",
+    "build:css:tailwind": "bunx tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.tailwind.css -c ./tailwind.config.js",
+    "build:css:merge": "cat ./app/assets/builds/application.bootstrap.css ./app/assets/builds/application.tailwind.css > ./app/assets/builds/application.css",
     "build:css:prefix": "postcss ./app/assets/builds/application.css --use=autoprefixer --output=./app/assets/builds/application.css",
-    "build:css": "yarn run build:css:compile && yarn run build:css:prefix",
-    "watch:css": "nodemon --watch ./app/assets/stylesheets/ --ext scss --exec \"bun run build:css\""
+    "build:css:bootstrap-only": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules --quiet-deps",
+    "build:css": "yarn run build:css:bootstrap && yarn run build:css:tailwind && yarn run build:css:merge && yarn run build:css:prefix",
+    "build:css:legacy": "yarn run build:css:bootstrap-only && yarn run build:css:prefix",
+    "watch:css": "nodemon --watch ./app/assets/stylesheets/ --watch ./app/javascript/ --watch ./app/views/ --watch ./app/helpers/ --watch ./tailwind.config.js --ext css,scss,js,ts,tsx,jsx,erb,rb --exec \"bun run build:css\""
   },
   "browserslist": [
     "defaults"
