--- a/package.json
+++ b/package.json
@@ -14,13 +14,7 @@
     "tailwindcss": "^3.4.18"
   },
   "scripts": {
-    "build:css:bootstrap": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.bootstrap.css --no-source-map --load-path=node_modules --quiet-deps",
-    "build:css:tailwind": "bunx tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.tailwind.css -c ./tailwind.config.js",
-    "build:css:merge": "cat ./app/assets/builds/application.bootstrap.css ./app/assets/builds/application.tailwind.css > ./app/assets/builds/application.css",
-    "build:css:prefix": "postcss ./app/assets/builds/application.css --use=autoprefixer --output=./app/assets/builds/application.css",
-    "build:css:bootstrap-only": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules --quiet-deps",
-    "build:css": "yarn run build:css:bootstrap && yarn run build:css:tailwind && yarn run build:css:merge && yarn run build:css:prefix",
-    "build:css:legacy": "yarn run build:css:bootstrap-only && yarn run build:css:prefix",
+    "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.bootstrap.css --no-source-map --load-path=node_modules --quiet-deps && bunx tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.tailwind.css -c ./tailwind.config.js && cat ./app/assets/builds/application.bootstrap.css ./app/assets/builds/application.tailwind.css > ./app/assets/builds/application.css && postcss ./app/assets/builds/application.css --use=autoprefixer --output=./app/assets/builds/application.css",
     "watch:css": "nodemon --watch ./app/assets/stylesheets/ --watch ./app/javascript/ --watch ./app/views/ --watch ./app/helpers/ --watch ./tailwind.config.js --ext css,scss,js,ts,tsx,jsx,erb,rb --exec \"bun run build:css\""
   },
   "browserslist": [
